--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700');
+body
+{
+  font-family: 'Lato';
+  overflow-x: hidden;
+}
